# TXEnginePy

./: conftest.py  pyproject.toml  readme.md
.github/workflows/: python-app.yml  unit-test.yml
assets/: abilities.json  dialogs.json  equipment_slots.json  items.json  rooms.json
src/: main.py
src/game/: __init__.py  cache.py  engine.py  formatting.py  game_state_controller.py  mixins.py
src/game/structures/: enums.py  errors.py  loadable.py  loadable_factory.py  manager.py  messages.py  state_device.py
src/game/systems/: __init__.py
src/game/systems/combat/: __init__.py  ability.py  ability_controller.py  ability_manager.py  effect.py
src/game/systems/crafting/: __init__.py  crafting_controller.py  recipe.py  recipe_manager.py
src/game/systems/currency/: __init__.py  coin_purse.py  currency.py  currency_manager.py  trade_mixin.py
src/game/systems/dialog/: __init__.py  (+2 more)
src/game/util/: asset_utils.py  input_utils.py
src/viewer/: textual_app.py  viewer.py  ws_viewer.py
test/: test_cache.py
test/structures/: test_component_factory.py  test_finite_state_device.py  test_state_device.py  test_string_content.py
test/systems/: __init__.py  utils.py
test/systems/combat/: test_ability.py  test_agency.py  test_combat_engine.py  test_combat_math.py  test_resource_effect.py
test/systems/crafting/: test_crafting_controller.py
test/systems/currency/: test_coin_purse.py  test_currency.py
test/systems/dialog/: test_dialog_node.py
test/systems/entity/: test_combat_entity.py  test_entity.py  test_equipment_controller.py  test_resource_controller.py  test_resource_modifier.py  test_temporary_entity.py
test/systems/events/: event_tester.py  test_select_element_event.py
test/systems/flag/: test_flag_manager.py
test/systems/inventory/: test_inventory.py  test_stack.py
test/systems/item/: test_loot.py  test_temporary_item.py
test/systems/requirements/: test_flag_manager.py  test_item_requirement.py  test_skill_requirement.py
test/systems/skill/: test_skill.py
(+58 files in other folders)
