[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "txengine"
version = "0.1.0"
description = "A code-free text-based game engine written in Python and configured with JSON"
authors = ["Aaron Sigal <aaronsigaldev@gmail.com>"]
license = "LICENSE.md"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.3"
fastapi = {extras = ["standard"], version = "^0.115.6"}
textual = "^1.0.0"
omegaconf = "^2.3.0"
requests = "^2.32.3"


[tool.poetry.group.test.dependencies]
pytest = "*"
pydantic = "*"
mypy = "*"
ruff = "*"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"src/game/engine.py" = ["F403"]